# cookie-py

./: README.md  cookiecutter.json  pyproject.toml
tests/: __init__.py  test_package_import.py
